# control-playground

./: README.md  control_double_inverted_pendulum.py  double_inverted_pendulum.ipynb  pyproject.toml
controller/: base.py  ilqr.py  lqr.py  mpc.cpp  mpc.py  pid.py  pole_placement.py
dynamics/: base.py  double_inverted_pendulum.py  state_space.py
estimator/: disturbance_observer.py  kalman_filter.py
simulator/: simulator.py
utils/: math.py
visualization/: visualization.py
