[project]
name = "control-playground"
version = "0.1.0"
description = "Repository for experimenting with various control algorithms"
authors = [
    { name = "kosuke55", email = "kosuke.tnp@gmail.com" }
]
dependencies = [
    "control>=0.10.0",
    "numpy>=2.0.1",
    "cvxpy>=1.5.2",
    "casadi>=3.6.5",
    "jax>=0.4.30",
    "sympy>=1.13.1",
    "numba>=0.60.0",
    "pyqt6>=6.7.1",
    "iLQR @ git+https://github.com/kosuke55/iLQR.git@main"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pendulum_control"]
